test/compile-fail/resolution/use/ambiguous-child/expected.txt
error: `b` is ambiguous (mod versus other mods found during resolution)
   ┌─ ./test/compile-fail/resolution/use/ambiguous-child/top.rhdl:10:8
   │
10 │ use a::b::c;
   │        ^ ambiguous name
   │
   = rename other mods with the same name

error: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/use/ambiguous-child/top.rhdl:2:13
  │
2 │     pub mod b {
  │             - previous definition of the name `b` here
  ·
5 │     pub mod b {
  │             ^ `b` redefined here

